my first commit

--- a/src/app/products/add-product-modal/add-product-modal.page.html
+++ b/src/app/products/add-product-modal/add-product-modal.page.html
@@ -1,9 +1,17 @@
 <ion-header>
   <ion-toolbar>
-    <ion-title>addProductModal</ion-title>
+    <ion-title></ion-title>
+    <ion-button slot="end" fill="clear">Save</ion-button>
   </ion-toolbar>
 </ion-header>
 
 <ion-content>
-
+  <ion-card>
+    <ion-lable>Name:</ion-lable>
+    <ion-input type="text"></ion-input>
+    <ion-lable>Actual Price:</ion-lable>
+    <ion-input type="text"></ion-input>
+    <ion-lable>Custom Price:</ion-lable>
+    <ion-input type="text"></ion-input>
+  </ion-card>
 </ion-content>
