--- a/src/app/products/products/products.page.html
+++ b/src/app/products/products/products.page.html
@@ -2,10 +2,13 @@
   <ion-toolbar>
     <ion-menu-button slot="start"></ion-menu-button>
     <ion-title>Products</ion-title>
-    <ion-button slot="end" fill="clear" ><ion-icon name="add"></ion-icon></ion-button>
+    <ion-button slot="end" fill="clear" (click)="presentModal()"><ion-icon name="add"></ion-icon></ion-button>
   </ion-toolbar>
 </ion-header>
-
 <ion-content>
-
+  <ion-list>Apple</ion-list>
+  <ion-list>Orange</ion-list>
+  <ion-list>Banana</ion-list>
+  <ion-list>Grapes</ion-list>
+  <ion-list>PineApple</ion-list>
 </ion-content>
